objects/CRMforNonProfit__NNOMapping__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__DarujmeCZ_Field__c</fullName>
        <label>DarujmeCZ_Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__NNOSettings__c</fullName>
        <label>NNOSettings</label>
        <referenceTo>CRMforNonProfit__NNOSettings__c</referenceTo>
        <relationshipName>DarujmeCZ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Pledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__SFDC_Field__c</fullName>
        <label>SFDC_Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NNOMapping</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>NNOMapping Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NNOMapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>